# ey-biodiversity-challenge-zindi

./: .gitignore  flow.txt  pyproject.toml
notebooks/: Biodiversity_Challenge_Benchmark-extension.ipynb  Biodiversity_Challenge_Benchmark.ipynb  TerraClimate.ipynb  best-pipeline-test.ipynb  eda.ipynb  inception.ipynb  inspect.ipynb  regression_pipeline.pkl  submission_dups_removed.csv
scripts/: download-region-terraclimate.py  map-satellite-data.py  map_satellite_data.py  tuner.py  utils.py
submissions/: Benchmark.csv  dups-removed-xgb.csv  rf-no-tuning.csv  submission-tuner.csv  submission_classification_tuning_2.csv
tuning/: classification_tuning.db  classification_tuning_2.db  optuna.db  train_dups_removed.db
