[project]
name = "ey-biodiversity-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "e-hokge777",email = "e.hokage777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (==2.2.3)",
    "pystac (==1.11.0)",
    "fsspec (==2024.10.0)",
    "xarray (==2024.10.0)",
    "tqdm (==4.66.5)",
    "matplotlib (==3.9.2)",
    "seaborn (==0.13.2)",
    "scikit-learn (==1.5.2)",
    "pystac-client (==0.8.5)",
    "planetary-computer (==1.0.0)",
    "adlfs (==2024.7.0)",
    "rioxarray (>=0.21.0,<0.22.0)",
    "zarr (>=3.1.6,<4.0.0)",
    "dask (>=2026.3.0,<2027.0.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "optuna (>=4.8.0,<5.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "ydata-profiling (>=4.18.3,<5.0.0)",
    "setuptools (==81.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
